Update Overflow issue

--- a/src/index.css
+++ b/src/index.css
@@ -4,3 +4,6 @@
 @tailwind components;
 @tailwind utilities;
 
+html, body {
+  overflow-x: hidden;
+}
